# MathJIT

./: Cargo.toml  README.md
src/: main.rs  ops.rs  parser.rs  timings.rs  tokenizer.rs  util.rs
src/eval/: ast_interpret.rs  llvm.rs  mod.rs
src/eval/intrinsic/: mod.rs  sqrt.rs  sum.rs  trig.rs
